PLAT-663 fixed header esu close button issue on IE

--- a/themes/custom/campaign_base/templates/components/email-signup/_email-signup-head.scss
+++ b/themes/custom/campaign_base/templates/components/email-signup/_email-signup-head.scss
@@ -75,19 +75,25 @@
     @include breakpoint($screen-lg) {
       //padding: 25px 0;
     }
-    .icon {
+    button.esu-head-close {
       position: absolute;
       top: 10px;
       right: 10px;
+      cursor: pointer;
+      background-color: black;
+      border: none;
+      &:hover,
+      &:focus {
+        .icon {
+          fill: $colour-jasper-grey;
+        }
+      }
+    }
+    .icon {
       width: 30px;
       height: 30px;
       cursor: pointer;
-
       fill: $colour-white;
-      &:hover,
-      &:focus {
-        fill: $colour-jasper-grey;
-      }
     }
   }
   .cr-email-signup--messages {
